# aiogram-bot-example

./: .env.example  .flake8  .gitignore  pyproject.toml
app/: config.py
app/infrastructure/cache/: base.py  redis.py  serializer.py  storages.py
app/infrastructure/common/: chats_csv.py
app/infrastructure/database/: db.py
app/infrastructure/database/exceptions/: __init__.py  chat.py
app/infrastructure/database/models/: __init__.py  chat.py  user.py
app/infrastructure/database/repositories/: __init__.py  base.py  chat.py  general.py  user.py
app/infrastructure/logging/: __init__.py  handler.py
app/infrastructure/rabbitmq/base/: consumer.py  publisher.py
app/infrastructure/rabbitmq/consumers/: __init__.py  telegram.py
app/infrastructure/rabbitmq/publishers/: __init__.py  telegram.py
app/tgbot/: __main__.py  dispatcher.py
app/tgbot/filters/: __init__.py  role.py
app/tgbot/handlers/: __init__.py  setup.py
app/tgbot/handlers/admin/: __init__.py  add.py  common.py  delete.py  edit.py  menu.py  setup.py
app/tgbot/handlers/chat/: __init__.py  setup.py  start.py
app/tgbot/handlers/user/: __init__.py  setup.py  start.py
app/tgbot/lexicon/: lexicon_ru.py
app/tgbot/middlewares/: __init__.py  chat.py  database.py  logging.py  setup.py  user.py
app/tgbot/services/: set_menu.py
app/tgbot/states/: __init__.py  admin.py  chat.py
docs/to_be/: c1.puml
migrations/: env.py
migrations/versions/: 1458ff8f8e13_initial.py  6ba3d2cbb928_initial.py
