[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Oleg Podryadov <oleg_podryadov@mail.ru>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "~3.11"
aiogram = "3.7.0"
pydantic-settings = "2.3.3"
sqlalchemy = "2.0.30"
asyncpg = "0.29.0"
alembic = "1.13.1"
redis = {version = "5.0.6", extras = ["hiredis"]}
aiogram-dialog = "2.1.0"
loguru = "0.7.2"
orjson = "3.10.5"
aiormq = "6.8.0"


[tool.poetry.group.dev.dependencies]
black = "24.2.0"
isort = "5.13.2"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = """
/(
    .venv
    | venv
    | migrations
)/
"""

[tool.isort]
py_version = 311
line_length = 79
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
skip = [".venv", "venv", "migrations"]